# sghi-ml-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/sghi/ml_pipeline/: __main__.py  domain.py
src/sghi/ml_pipeline/domain/: __init__.py  spec.py
src/sghi/ml_pipeline/lib/big_query/: __init__.py
src/sghi/ml_pipeline/lib/common/: __init__.py  data_processors.py  data_sinks.py  data_sources.py  workflow_builder.py  workflow_descriptors.py
src/sghi/ml_pipeline/lib/google/: __init__.py
src/sghi/ml_pipeline/lib/google/big_query/: __init__.py
src/sghi/ml_pipeline/lib/google/storage/: __init__.py
src/sghi/ml_pipeline/runtime/: __main__.py  constants.py  signals.py  ui.py
src/sghi/ml_pipeline/runtime/setup/: __init__.py  config_file_loaders.py  setting_initializers.py
src/sghi/ml_pipeline/runtime/tui/: __init__.py
src/sghi/ml_pipeline/runtime/tui/simple/: printers.py  ui.py
src/sghi/ml_pipeline/runtime/usecases/: __init__.py  run_workflow.py
src/sghi/ml_pipeline/workflows/fyj_iit_workflow/: __init__.py
test/sghi/ml_pipeline/: __main__tests.py  domain_tests.py
